--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="UchihaItachi.MyPath" version="2.0.0" targetFramework="net48" />
+  <package id="UchihaItach.MyPath" version="8.0.0" targetFramework="net48" />
   <package id="WinForm.Transitions" version="1.2.45.0" targetFramework="net48" />
 </packages>
